Entry introspection 🍆
