# apps/api/urls.py
@@ -27,6 +27,7 @@ urlpatterns = [
 
     # Entries
     path("entries", entries.EntryPaginator.as_view()),
+    path("entry-introspection", entries.EntryIntrospection.as_view()),
     path("catalogs/<uuid:catalog_id>/entries", entries.EntryManagement.as_view()),
     path("catalogs/<uuid:catalog_id>/entries/<uuid:entry_id>", entries.EntryDetail.as_view()),
 
